<resources>
    <string name="app_name">Admin Wave of Food</string>
    <string name="waves_of_food">Wave Of Food</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="design_by_jadoun_ntech_solution_pvt_ltd">Design by\n JADOUN TECH SOLUTION PVT. LTD.</string>
    <string name="log_in_to_admin_dashboard">LogIn To Your\n Admin Dashboard</string>
    <string name="email_or_phone_number">Email or Phone</string>
    <string name="password">Password</string>
    <string name="or_n_continue_with">Or\n continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up_here_for_your_n_admin_dashboard">Sign Up Here For Your\n Admin Dashboard</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="signup">SignUp</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="name_of_restaurant">Name of Resataurant</string>
    <string name="pending_order">Pending Order</string>
    <string name="_30">30</string>
    <string name="completed_order">Completed\ny order</string>
    <string name="_100">100$</string>
    <string name="whole_time_n_earning">Whole Time\n Earning</string>
    <string name="add_menu">Add Menu</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="create_new_user">Create New User</string>
    <string name="log_out">Log Out</string>
    <string name="money_on_hold">Money On Hold</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_image">Item Image</string>
    <string name="short_description">Short Description</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="ingredients">Ingredients</string>
    <string name="noddle_nsalad_nburger_nherbal_npan_ncakemomos">Noddle\nSalad\nBurger\nHerbal\nPan\nCakeMomos</string>
    <string name="enter_food_price">Enter Food Price</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="food_image">Food Image</string>
    <string name="_5">$5</string>
    <string name="minus">-</string>
    <string name="plush">+</string>
    <string name="number">1</string>
    <string name="all_item">All Item</string>
    <string name="customer_name">Customer Name</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivered">Delivered</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="select_image">Select Image</string>
    <string name="save_information">Save Information</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="click_here_to_edit">Click Here To Edit</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="quantity">Quantity</string>
    <string name="five">5</string>
    <string name="accept">Accept</string>
</resources>