<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ProfileActivity">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/icon"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_profile"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_your_profile"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvName"
                app:layout_constraintTop_toTopOf="@+id/tvName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cvName"
        app:layout_constraintStart_toStartOf="@+id/cvName"
        app:layout_constraintTop_toBottomOf="@+id/cvName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAddress"
                app:layout_constraintTop_toTopOf="@+id/tvAddress" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmail"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cvAddress"
        app:layout_constraintStart_toStartOf="@+id/cvAddress"
        app:layout_constraintTop_toBottomOf="@+id/cvAddress">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEmail"
                app:layout_constraintTop_toTopOf="@+id/tvEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPhone"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cvEmail"
        app:layout_constraintStart_toStartOf="@+id/cvEmail"
        app:layout_constraintTop_toBottomOf="@+id/cvEmail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPhone"
                app:layout_constraintTop_toTopOf="@+id/tvPhone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPassword"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cvPhone"
        app:layout_constraintStart_toStartOf="@+id/cvPhone"
        app:layout_constraintTop_toBottomOf="@+id/cvPhone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPassword"
                app:layout_constraintTop_toTopOf="@+id/tvPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveInfo"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:text="@string/save_information"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/cvPassword"
        app:layout_constraintStart_toStartOf="@+id/cvPassword"
        app:layout_constraintTop_toBottomOf="@+id/cvPassword"
        android:background="@drawable/white_button"
        android:elevation="10dp"
        />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/design_by_jadoun_ntech_solution_pvt_ltd"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/click_here_to_edit"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />


</androidx.constraintlayout.widget.ConstraintLayout>