<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.CreateUserActivity">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/icon"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:srcCompat="@drawable/backgroung_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/waves_of_food"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_new_user_admin"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/white_button"
        android:ems="10"
        android:drawableLeft="@drawable/icon__2_profile"
        android:drawablePadding="15dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:shadowColor="#5A6CEA"
        android:shadowDx="12"
        android:shadowDy="26"
        android:textSize="14sp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/white_button"
        android:ems="10"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:shadowColor="#5A6CEA"
        android:shadowDx="12"
        android:shadowDy="26"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/white_button"
        android:ems="10"
        android:drawableStart="@drawable/lock_01"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:shadowColor="#5A6CEA"
        android:shadowDx="12"
        android:shadowDy="26"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:drawableEnd="@drawable/eye_off"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateNewUser"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/red_button"
        android:backgroundTint="@color/text_color"
        android:elevation="5dp"
        android:text="@string/create_new_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/design_by_jadoun_ntech_solution_pvt_ltd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>